tests/good/misc/together.pas
program Together;

var i, j;
begin
    for i := 0 to 6 do
        for j := i + 1 to 6 do
            WriteLn(i + j)
end.
