tests/bad/undeclared-variable.pas
program undeclared_variable;

begin
    x := 1
end.
